# painting_split

./: .gitignore  README.md  ai_detector.py  app.py  config.toml  image_processor.py  pyproject.toml  requirements.txt  run_storage.py  run_web.sh  secrets.example.yaml  secrets_loader.py
assets/: 2020-08-23_10-07-07_687.heic  2021-10-07_22-42-25_598.heic
core/: __init__.py  image.py
data/extractions/2017-10-22_18-41-22_438/: manifest.json
data/extractions/2017-10-22_18-45-30_011/: manifest.json
data/runs/2017-10-22_18-41-22_438/2026-03-03T23-54-14Z/: assessment.json  manifest.json
data/runs/2017-10-22_18-45-30_011/2026-03-03T23-55-14Z/: manifest.json
detection/: __init__.py  painting_detector.py
docs/: ARCHITECTURE.md  FILE-NAMING.md  MANIFEST.md
extraction/: __init__.py  extractor.py
scripts/: make_sample_secrets.py  retrieve_one.py  retrieve_paintings_batch.py  split_from_sections.py
static/: index.html
tests/: test_app.py  test_core.py  test_detection.py  test_extraction.py  test_image_processor.py
