[project]
name = "painting-split"
version = "0.1.0"
description = "Detect painting edges in camera-roll photos, correct perspective, and split multi-canvas into smallest sections."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "Pillow>=12.0",
    "scikit-image>=0.25",
    "scipy>=1.14",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
painting-split = "painting_split.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
